# phosphonet

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: Node2Vec_training.ipynb  README.md  build_phos_table.ipynb  join_with_gps.ipynb
phosphonet/modeling/: transformer.py
