[project]
name = "phosphonet"
dynamic = ["version"]
description = "Phosphoproteome model"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Ji Yu"},
  {email = "jyu@uchc.edu"},
]
requires-python = ">=3.10"
dependencies = [
    "xtrain",
]

[project.optional-dependencies]
testing = [
    "jupyterlab",
    "setuptools_scm",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
]

[project.urls]
"Source Code" = "https://github.com/jiyuuchc/phosphonet"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true


[tool.setuptools.package-data]
"*" = ["*.yaml"]


[tool.setuptools_scm]
write_to = "phosphonet/_version.py"

[tool.black]
line-length = 79
target-version = ['py310']

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
]

target-version = "py310"
fix = true
